Added Merchant Id and Card Holder Name to the Payment class.
